--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <li>Temporada 1: 12 capítulos</li>
   <li>Temporada 2: 12 capítulos</li>
   
-  <img src="docs/IMG/OPM3_teaservisual_20210323_senden_logocpy_WEB.png" alt="Poster Promocional One Punch Man" width="500" height="500">
+  <img src="IMG/OPM3_teaservisual_20210323_senden_logocpy_WEB.png" alt="Poster Promocional One Punch Man" width="500" height="500"> 
   
   </section>
 
@@ -52,12 +52,12 @@
     </tr>
     <tr>
         <td>Saitama</td>
-        <td><img src="docs/IMG/chechi_ewwz.1280.png" alt="Saitama" width="200" height="200"></td>
+        <td><img src="IMG/chechi_ewwz.1280.png" alt="Saitama" width="200" height="200"></td>
         <td>El superhéroe más fuerte, pero aburrido por su poder.</td>
     </tr>
     <tr>
         <td>Genos</td>
-        <td><img src="docs/IMG/Manga_-_Genos.png" alt="Genos" width="300" height="300"></td>
+        <td><img src="IMG/Manga_-_Genos.png" alt="Genos" width="300" height="300"></td>
         <td>Cyborg con sed de venganza contra el monstruo que destruyó su vida.</td>
     </tr>
 
