--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi serie favorita</title>
-    <link rel="stylesheet" href="style.css" />
-    <style>
-      h1 {
-        color: #000000;
-        
-      }
-    </style>
-    <style>
-
-      body{
-
-        background-color: rgb(78, 113, 114);
-      }
-    </style>
+    <meta name="description" content="Descripción de mi serie favorita One Punch Man">
+    <title>One Punch Man - Mi Serie Favorita</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="ruta/a/tu-favicon.ico" type="image/x-icon">
 </head>
+
 <body>
   <section>
     <h1>One Punch Man</h1>
